# robot_control_cloth

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.sh
config/: moveit_cpp.yaml  moveit_planning.yaml  ompl_moveit_cpp.yaml  ompl_planning.yaml  panda_original_realsense_nottingham.yaml  pilz_industrial_motion_planner_moveit_cpp.yaml  ur3e_active_realsense_standrews.yaml
interface/: agent_arena_interface.py  control_interface.py  human_interface.py  planet_clothpick_plus_plus_interface.py  utils.py
launch/: new_launch.py  ur3e_robot_moveit_launch.py  ur_robot_moveit_executable_launch.py
msg/: NormPixelPnP.msg  Observation.msg
policies/: agent_arena_interface.py  control_interface.py  human_interface.py  utils.py
policies/human_data/flattening/test/step_0/: action.npy
policies/human_data/flattening/test/step_1/: action.npy
policies/human_data/flattening/test/step_2/: action.npy
policies/human_data/flattening/test/step_3/: action.npy
policies/human_data/flattening/test_0/step_0/: action.npy
rcc_msgs/: CMakeLists.txt  package.xml
rcc_msgs/msg/: NormPixelPnP.msg  Observation.msg  WorldPnP.msg
rcc_qs_pnp/: CMakeLists.txt  package.xml
rcc_qs_pnp/config/: cartesian_limits.yaml  joint_limits.yaml  kinematics.yaml  panda.srdf  panda.urdf.xacro  panda_original_realsense_nottingham.yaml  pilz_industrial_motion_planner_planning.yaml  ur3e_active_realsense_standrews.yaml  ur3e_active_realsense_standrews_workspace.yaml
rcc_qs_pnp/launch/: chomp_planning_pipeline.launch.xml  franka_control.launch  franka_robot_moveit_executable.launch  move_group.launch  ompl_planning_pipeline.launch.xml  panda_robot_moveit_executable.launch  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  simple_moveit_controller_manager.launch.xml  ur_robot_moveit_executable_launch.py
rcc_qs_pnp/scripts/: active_gripper_control.py  camera_image_retriever copy.py  camera_image_retriever.py  hand_eye_calibrator.py  panda_gripper_control.py  panda_robot_moveit.py  quasi_static_pick_and_place.py  rcc_utils.py  test_whole_system.py  ur3e_robot_moveit.py  utils.py
scripts/: camera_image_retriever copy.py  camera_image_retriever.py  hand_eye_calibrator.py  human_interface.py  quasi_static_pick_and_place.py  test_whole_system.py  utils.py
