<?xml version="1.0"?>
<package format="3">
  <name>robot_control_cloth</name>
  <version>0.0.1</version>
  <description>Robot control for cloth manipulation</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_py</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>ur_description</depend>
  <depend>ur_moveit_config</depend>
  <depend>ros_ur_driver</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
