<?xml version="1.0"?>
<package format="3">
  <name>rcc_qs_pnp</name>
  <version>0.0.1</version>
  <description>Robot control for cloth manipulation</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>ur_description</depend>
  <depend>ur_moveit_config</depend>
  <depend>ros_control</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>

